--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
@@ -169,9 +169,9 @@
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <lnk:calendar id="editarFechaInicialSP" value="#{info.iniciosustitucion}" height="12">
-                                                <p:ajax event="dateSelect" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'N',info.iniciosustitucion)}" update="@this" process="@this" />
-                                                <p:ajax event="change" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'N',info.iniciosustitucion)}" update="@this" process="@this" />
+                                            <lnk:calendar id="editarFechaInicialSP" value="#{info.iniciosustitucion}" height="12" width="88">
+                                                <p:ajax event="dateSelect" listener="#{controlVigenciasTiposContratos.modificarFechasNoObligatorias(indice)}" update="@this" process="@this" />
+                                                <p:ajax event="change" listener="#{controlVigenciasTiposContratos.modificarFechasNoObligatorias(indice)}" update="@this" process="@this" />
                                                 <p:ajax event="select" listener="#{controlVigenciasTiposContratos.cambiarIndice(indice, 4)}"/>
                                             </lnk:calendar>
                                         </f:facet> 
@@ -190,7 +190,7 @@
                                             </h:outputText>
                                         </f:facet>  
                                         <f:facet name="input">
-                                            <lnk:calendar id="editarFechaInicialFlexi" value="#{info.inicioflexibiliza}" height="12">
+                                            <lnk:calendar id="editarFechaInicialFlexi" value="#{info.inicioflexibiliza}" height="12" width="88">
                                                 <p:ajax event="dateSelect" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'N', info.inicioflexibiliza)}" update="@this" process="@this"/>
                                                 <p:ajax event="change" listener="#{controlVigenciasTiposContratos.modificarVTC(indice, 'N', info.inicioflexibiliza)}" update="@this" process="@this" />
                                                 <p:ajax event="select" listener="#{controlVigenciasTiposContratos.cambiarIndice(indice, 5)}" />
@@ -294,7 +294,7 @@
                     <p:dialog id="validacionFechaDuplicada" header="#{msg['atencion']}" widgetVar="validacionFechaDuplicada"  resizable="false" draggable="false" modal="true" height="95" width="440"  closable="false">  
                         <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="60" style="position: absolute; left: 20px; top: 10px;"  />
                         <h:outputText value="#{msg['fechaDuplicada']}" style="position: absolute; left: 110px; top: 20px; width: 300px;" />
-                        <p:commandButton value="#{msg['aceptar']}" onclick="validacionFechaDuplicada.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
+                        <p:commandButton value="#{msg['aceptar']}" onclick="validacionFechaDuplicada.hide();" style="position: absolute; top: 60px; left: 300px"  process="@this" />
                     </p:dialog>
 
                     <p:hotkey bind="ctrl+f11" actionListener="#{controlVigenciasTiposContratos.activarCtrlF11()}"/> 
